python packages reorder

--- a/install
+++ b/install
@@ -476,166 +476,9 @@ fi
 #PKG: yapf
 #PKG: httpie
 #PKG: autopep8
-#PKG: python-ipykernel
 #PKG: ansible
-#PKG: python-gobject
-#PKG: python-pyqt5
-#PKG: python-numpy
-#PKG: python-numpydoc
-#PKG: python-scipy
-#PKG: python-ipdb
-#PKG: python-sympy
-#PKG: python-tensorflow
-#PKG: python-tensorflow-estimator
-#PKG: python-tensorflow-serving-api
-#PKG: python-h5py
-#PKG: python-cffi
-#PKG: python-cairocffi
-#PKG: python-gammu
-#PKG: python-appdirs
-#PKG: python-beautifulsoup4
-#PKG: python-html5lib
-#PKG: python-bleach
-#PKG: python-pytz
-#PKG: python-docker
-#PKG: python-docutils
-#PKG: python-gmpy2
-#PKG: python-jinja
-#PKG: python-matplotlib
-#PKG: python-pillow
-#PKG: python-pip
-#PKG: python-pygal
-#PKG: python-pygame
-#PKG: python-pygments
-#PKG: python-pylint
-#PKG: python-whoosh
-#PKG: python-ordered-set
-#PKG: python-watchdog
-#PKG: python-py
-#PKG: python-pytest
-#PKG: python-mock
-#PKG: python-pytest-mock
-#PKG: python-coverage
-#PKG: python-pytest-cov
-#PKG: python-setuptools
-#PKG: python-setuptools-scm
-#PKG: python-wheel
-#PKG: python-snowballstemmer
-#PKG: python-virtualenv
-#PKG: python-yaml
-#PKG: python-django
-#PKG: python-tornado
-#PKG: python-tox
-#PKG: python-packaging
-#PKG: python-pandas
-#PKG: python-pandas-datareader
-#PKG: python-cvxopt
-#PKG: python-webtest
-#PKG: python-six
-#PKG: python-sphinx
-#PKG: python-sphinx-alabaster-theme
-#PKG: python-sphinx-testing
-#PKG: python-gitpython
-#PKG: python-sphinx_rtd_theme
-#PKG: python-pathspec
-#PKG: python-pudb
-#PKG: python-grpcio
-#PKG: python-astropy
 #PKG: gunicorn
 #PKG: uwsgi
-#PKG: python-redis
-#PKG: python-sphinxcontrib-applehelp
-#PKG: python-sphinxcontrib-autoprogram
-#PKG: python-sphinxcontrib-bibtex
-#PKG: python-sphinxcontrib-blockdiag
-#PKG: python-sphinxcontrib-devhelp
-#PKG: python-sphinxcontrib-htmlhelp
-#PKG: python-sphinxcontrib-jsmath
-#PKG: python-sphinxcontrib-newsfeed
-#PKG: python-sphinxcontrib-qthelp
-#PKG: python-sphinxcontrib-seqdiag
-#PKG: python-sphinxcontrib-serializinghtml
-#PKG: python-sphinxcontrib-trio
-#PKG: python-pyxdg
-#PKG: python-msgpack
-#PKG: python-chardet
-#PKG: python-cachecontrol
-#PKG: python-lxml
-#PKG: python-lxml-docs
-#PKG: python-pyx
-#PKG: python-markupsafe
-#PKG: python-attrs
-#PKG: python-dateutil
-#PKG: python-decorator
-#PKG: python-pyparsing
-#PKG: python-nltk
-#PKG: python-pycparser
-#PKG: python-pycurl
-#PKG: python-requests
-#PKG: python-twisted
-#PKG: python-urllib3
-#PKG: python-urllib3-doc
-#PKG: python-cairosvg
-#PKG: python-click
-#PKG: python-click-log
-#PKG: python-click-repl
-#PKG: python-webencodings
-#PKG: python-click-threading
-#PKG: python-colorama
-#PKG: python-fuse
-#PKG: python-qrencode
-#PKG: python-wikipedia
-#PKG: python-doit
-#PKG: python-bottle
-#PKG: python-flask
-#PKG: python-pony
-#PKG: python-sqlalchemy
-#PKG: python-flask-appconfig
-#PKG: python-flask-babel
-#PKG: python-contextlib2
-#PKG: python-distro
-#PKG: python-flask-babelex
-#PKG: python-flask-bootstrap
-#PKG: python-flask-caching
-#PKG: python-flask-dance
-#PKG: python-flask-debug
-#PKG: python-flask-gravatar
-#PKG: python-flask-htmlmin
-#PKG: python-flask-jwt
-#PKG: python-flask-login
-#PKG: python-flask-mail
-#PKG: python-flask-marshmallow
-#PKG: python-flask-migrate
-#PKG: python-flask-nav
-#PKG: python-flask-paranoid
-#PKG: python-flask-principal
-#PKG: python-retrying
-#PKG: python-toml
-#PKG: python-flask-restful
-#PKG: python-flask-security
-#PKG: python-ply
-#PKG: python-flask-socketio
-#PKG: python-flask-sphinx-themes
-#PKG: python-progress
-#PKG: python-flask-sqlalchemy
-#PKG: python-flask-talisman
-#PKG: python-flask-wtf
-#PKG: python-black
-#PKG: python-pybtex
-#PKG: python-pybtex-docutils
-#PKG: python-service-identity
-#PKG: python-aws-sam-translator
-#PKG: python-aws-xray-sdk
-#PKG: python-pynvim
-#PKG: python-inflection
-#PKG: python-srcinfo
-#PKG: python-iniconfig
-#PKG: python-pluggy
-#PKG: python-apipkg
-#PKG: python-imagesize
-#PKG: python-openpyxl
-#PKG: python-reedsolo
-#PKG: python-pipx
 #PKG: sqlite
 #PKG: mariadb
 #PKG: postgresql
@@ -668,9 +511,6 @@ fi
 #PKG: xmonad
 #PKG: xmonad-contrib
 #PKG: xmonad-utils
-#PKG: haskell-shake
-#PKG: haskell-haddock-library
-#PKG: haskell-language-server
 #PKG: nix
 #PKG: go
 #PKG: go-tools
@@ -825,7 +665,6 @@ fi
 #PKG: bluez-utils
 #PKG: alsa-utils
 #PKG: alsa-lib
-#PKG: python-pyalsa
 #PKG: pulseaudio
 #PKG: pulseaudio-alsa
 #PKG: pulseaudio-bluetooth
@@ -1101,7 +940,6 @@ fi
 #PKG: zathura-pdf-mupdf
 #PKG: zathura-ps
 #PKG: catfish
-#PKG: python-pdfminer
 #PKG: neomutt
 #PKG: isync
 #PKG: msmtp
@@ -1155,6 +993,179 @@ fi
 #PKG: fzy
 #PKG: xmlstarlet
 #PKG: jq
+#PKG: python-pip
+#PKG: python-pipx
+#PKG: python-virtualenv
+#PKG: python-pipenv
+#PKG: python-ipykernel
+#PKG: python-gobject
+#PKG: python-pyqt5
+#PKG: python-numpy
+#PKG: python-numpydoc
+#PKG: python-scipy
+#PKG: python-ipdb
+#PKG: python-sympy
+#PKG: python-tensorflow
+#PKG: python-tensorflow-estimator
+#PKG: python-tensorflow-serving-api
+#PKG: python-h5py
+#PKG: python-cffi
+#PKG: python-cairocffi
+#PKG: python-gammu
+#PKG: python-appdirs
+#PKG: python-beautifulsoup4
+#PKG: python-html5lib
+#PKG: python-bleach
+#PKG: python-pytz
+#PKG: python-docker
+#PKG: python-docutils
+#PKG: python-gmpy2
+#PKG: python-jinja
+#PKG: python-matplotlib
+#PKG: python-pillow
+#PKG: python-pygal
+#PKG: python-pygame
+#PKG: python-pygments
+#PKG: python-pylint
+#PKG: python-whoosh
+#PKG: python-ordered-set
+#PKG: python-watchdog
+#PKG: python-py
+#PKG: python-pytest
+#PKG: python-mock
+#PKG: python-pytest-mock
+#PKG: python-coverage
+#PKG: python-pytest-cov
+#PKG: python-setuptools
+#PKG: python-setuptools-scm
+#PKG: python-wheel
+#PKG: python-snowballstemmer
+#PKG: python-yaml
+#PKG: python-django
+#PKG: python-tornado
+#PKG: python-tox
+#PKG: python-packaging
+#PKG: python-pandas
+#PKG: python-pandas-datareader
+#PKG: python-cvxopt
+#PKG: python-webtest
+#PKG: python-six
+#PKG: python-sphinx
+#PKG: python-sphinx-alabaster-theme
+#PKG: python-sphinx-testing
+#PKG: python-gitpython
+#PKG: python-sphinx_rtd_theme
+#PKG: python-pathspec
+#PKG: python-pudb
+#PKG: python-grpcio
+#PKG: python-astropy
+#PKG: python-redis
+#PKG: python-sphinxcontrib-applehelp
+#PKG: python-sphinxcontrib-autoprogram
+#PKG: python-sphinxcontrib-bibtex
+#PKG: python-sphinxcontrib-blockdiag
+#PKG: python-sphinxcontrib-devhelp
+#PKG: python-sphinxcontrib-htmlhelp
+#PKG: python-sphinxcontrib-jsmath
+#PKG: python-sphinxcontrib-newsfeed
+#PKG: python-sphinxcontrib-qthelp
+#PKG: python-sphinxcontrib-seqdiag
+#PKG: python-sphinxcontrib-serializinghtml
+#PKG: python-sphinxcontrib-trio
+#PKG: python-pyxdg
+#PKG: python-msgpack
+#PKG: python-chardet
+#PKG: python-cachecontrol
+#PKG: python-lxml
+#PKG: python-lxml-docs
+#PKG: python-pyx
+#PKG: python-markupsafe
+#PKG: python-attrs
+#PKG: python-dateutil
+#PKG: python-decorator
+#PKG: python-pyparsing
+#PKG: python-nltk
+#PKG: python-pycparser
+#PKG: python-pycurl
+#PKG: python-requests
+#PKG: python-twisted
+#PKG: python-urllib3
+#PKG: python-urllib3-doc
+#PKG: python-cairosvg
+#PKG: python-click
+#PKG: python-click-log
+#PKG: python-click-repl
+#PKG: python-webencodings
+#PKG: python-click-threading
+#PKG: python-colorama
+#PKG: python-fuse
+#PKG: python-qrencode
+#PKG: python-wikipedia
+#PKG: python-doit
+#PKG: python-bottle
+#PKG: python-flask
+#PKG: python-pony
+#PKG: python-sqlalchemy
+#PKG: python-flask-appconfig
+#PKG: python-flask-babel
+#PKG: python-contextlib2
+#PKG: python-distro
+#PKG: python-flask-babelex
+#PKG: python-flask-bootstrap
+#PKG: python-flask-caching
+#PKG: python-flask-dance
+#PKG: python-flask-debug
+#PKG: python-flask-gravatar
+#PKG: python-flask-htmlmin
+#PKG: python-flask-jwt
+#PKG: python-flask-login
+#PKG: python-flask-mail
+#PKG: python-flask-marshmallow
+#PKG: python-flask-migrate
+#PKG: python-flask-nav
+#PKG: python-flask-paranoid
+#PKG: python-flask-principal
+#PKG: python-retrying
+#PKG: python-toml
+#PKG: python-flask-restful
+#PKG: python-flask-security
+#PKG: python-ply
+#PKG: python-flask-socketio
+#PKG: python-flask-sphinx-themes
+#PKG: python-progress
+#PKG: python-flask-sqlalchemy
+#PKG: python-flask-talisman
+#PKG: python-flask-wtf
+#PKG: python-black
+#PKG: python-pybtex
+#PKG: python-pybtex-docutils
+#PKG: python-service-identity
+#PKG: python-aws-sam-translator
+#PKG: python-aws-xray-sdk
+#PKG: python-pynvim
+#PKG: python-inflection
+#PKG: python-srcinfo
+#PKG: python-iniconfig
+#PKG: python-pluggy
+#PKG: python-apipkg
+#PKG: python-imagesize
+#PKG: python-openpyxl
+#PKG: python-reedsolo
+#PKG: python-pdfminer
+#PKG: python-pyalsa
+#PKG: haskell-shake
+#PKG: haskell-haddock-library
+#PKG: haskell-language-server
+#PKG: haskell-tasty
+#PKG: haskell-tasty-lua
+#PKG: haskell-hakyll
+#PKG: haskell-hslua
+#PKG: haskell-quickcheck
+#PKG: haskell-tasty-quickcheck
+#PKG: haskell-erf
+#PKG: haskell-random
+#PKG: haskell-splitmix
+
 
 
 
