arch packages gone

--- a/install
+++ b/install
@@ -305,7 +305,6 @@ fi
 #PKG: libxml2
 #PKG: libmpc
 #PKG: icu
-#PKG: libcroco
 #PKG: gc
 #PKG: npth
 #PKG: libassuan
@@ -369,7 +368,6 @@ fi
 #PKG: cronie
 #PKG: inotify-tools
 #PKG: entr
-#PKG: cpulimit
 #PKG: dpkg
 #PKG: tldr
 #PKG: mkosi
@@ -421,11 +419,9 @@ fi
 #PKG: mlocate
 #PKG: rmlint
 #PKG: arch-install-scripts
-#PKG: asp
 #PKG: devtools
 #PKG: pacman-contrib
 #PKG: namcap
-#PKG: bash-bats
 #PKG: bash-completion
 #PKG: gmtp
 #PKG: mtpfs
@@ -435,9 +431,6 @@ fi
 #PKG: dialog
 #PKG: openssh
 #PKG: sshfs
-#PKG: keybase
-#PKG: kbfs
-#PKG: keybase-gui
 #PKG: qrencode
 #PKG: gnupg
 #PKG: pass
@@ -510,7 +503,6 @@ fi
 #PKG: coffeescript
 #PKG: asar
 #PKG: prettier
-#PKG: scala
 #PKG: sbt
 #PKG: gradle
 #PKG: kotlin
@@ -636,7 +628,7 @@ fi
 #PKG: xorg-xwininfo
 #PKG: xorg-xwud
 #PKG: ibus-libpinyin
-#PKG: ibus-m17n
+#PKG: m17n-lib
 #PKG: xdg-user-dirs
 #PKG: glfw-x11
 #PKG: xdotool
@@ -702,18 +694,15 @@ fi
 #PKG: amb-plugins
 #PKG: ambdec
 #PKG: ams
-#PKG: ams-lv2
 #PKG: amsynth
 #PKG: ardour
 #PKG: artyfx
 #PKG: aubio
 #PKG: audacity
 #PKG: avldrums.lv2
-#PKG: beatslash-lv2
 #PKG: blop
 #PKG: blop.lv2
 #PKG: bslizr
-#PKG: cadence
 #PKG: calf
 #PKG: caps
 #PKG: carla
@@ -721,7 +710,6 @@ fi
 #PKG: cmt
 #PKG: csound
 #PKG: csoundqt
-#PKG: deteriorate-lv2
 #PKG: dgedit
 #PKG: din
 #PKG: dpf-plugins
@@ -735,9 +723,7 @@ fi
 #PKG: fabla
 #PKG: faust
 #PKG: fil-plugins
-#PKG: fluajho
 #PKG: fomp.lv2
-#PKG: foxdot
 #PKG: freewheeling
 #PKG: g2reverb
 #PKG: geonkick
@@ -746,7 +732,6 @@ fi
 #PKG: hexter
 #PKG: hydrogen
 #PKG: infamousplugins
-#PKG: ir.lv2
 #PKG: jaaa
 #PKG: jack_capture
 #PKG: jacktrip
@@ -760,22 +745,15 @@ fi
 #PKG: lsp-plugins
 #PKG: luppp
 #PKG: lv2file
-#PKG: marsyas
 #PKG: mcp-plugins
 #PKG: mda.lv2
-#PKG: meterbridge
 #PKG: midi_matrix.lv2
 #PKG: mixxx
 #PKG: moony.lv2
 #PKG: njconnect
 #PKG: noise-repellent
-#PKG: non-mixer
-#PKG: non-sequencer
-#PKG: non-session-manager
-#PKG: non-timeline
 #PKG: opnplug
 #PKG: osc2midi
-#PKG: osmid
 #PKG: padthv1
 #PKG: patchmatrix
 #PKG: patroneo
@@ -801,17 +779,12 @@ fi
 #PKG: setbfree
 #PKG: sherlock.lv2
 #PKG: snd
-#PKG: solfege
-#PKG: sonic-pi
-#PKG: sonic-visualiser
 #PKG: sorcer
 #PKG: spectmorph
 #PKG: ssr
 #PKG: supercollider
-#PKG: sweep
 #PKG: swh-plugins
 #PKG: synthv1
-#PKG: tap-plugins
 #PKG: timidity++
 #PKG: vamp-aubio-plugins
 #PKG: vamp-plugin-sdk
@@ -860,7 +833,6 @@ fi
 #PKG: kicad
 #PKG: kicad-library
 #PKG: kicad-library-3d
-#PKG: pcb
 #PKG: ngspice
 #PKG: iverilog
 #PKG: yosys
@@ -871,8 +843,6 @@ fi
 #PKG: avr-gcc
 #PKG: avr-gdb
 #PKG: avr-libc
-#PKG: arduino
-#PKG: arduino-docs
 #PKG: stlink
 #PKG: arm-none-eabi-gdb
 #PKG: arm-none-eabi-gcc
@@ -883,7 +853,6 @@ fi
 #PKG: graphviz
 #PKG: xdot
 #PKG: vtk
-#PKG: mayavi
 #PKG: opencascade
 #PKG: opencv
 #PKG: opencv-samples
@@ -893,14 +862,12 @@ fi
 #PKG: librecad
 #PKG: freecad
 #PKG: blender
-#PKG: meshroom
 #PKG: gimp
 #PKG: krita
 #PKG: inkscape
 #PKG: ktikz
 #PKG: fontforge
 #PKG: imagemagick
-#PKG: imagemagick-doc
 #PKG: openscad
 #PKG: libreoffice-fresh
 #PKG: plantuml
@@ -1010,7 +977,6 @@ fi
 #PKG: calibre
 #PKG: waf
 #PKG: mkosi
-#PKG: solidity
 #PKG: gnuchess
 #PKG: exfatprogs
 #PKG: fzy
@@ -1058,7 +1024,6 @@ fi
 #PKG: python-watchdog
 #PKG: python-py
 #PKG: python-pytest
-#PKG: python-mock
 #PKG: python-pytest-mock
 #PKG: python-coverage
 #PKG: python-pytest-cov
@@ -1078,7 +1043,6 @@ fi
 #PKG: python-six
 #PKG: python-sphinx
 #PKG: python-sphinx-alabaster-theme
-#PKG: python-sphinx-testing
 #PKG: python-gitpython
 #PKG: python-sphinx_rtd_theme
 #PKG: python-pathspec
@@ -1089,7 +1053,6 @@ fi
 #PKG: python-sphinxcontrib-applehelp
 #PKG: python-sphinxcontrib-autoprogram
 #PKG: python-sphinxcontrib-bibtex
-#PKG: python-sphinxcontrib-blockdiag
 #PKG: python-sphinxcontrib-devhelp
 #PKG: python-sphinxcontrib-htmlhelp
 #PKG: python-sphinxcontrib-jsmath
@@ -1116,13 +1079,11 @@ fi
 #PKG: python-requests
 #PKG: python-twisted
 #PKG: python-urllib3
-#PKG: python-urllib3-doc
 #PKG: python-cairosvg
 #PKG: python-click
 #PKG: python-click-log
 #PKG: python-click-repl
 #PKG: python-webencodings
-#PKG: python-click-threading
 #PKG: python-colorama
 #PKG: python-fuse
 #PKG: python-qrencode
@@ -1130,20 +1091,14 @@ fi
 #PKG: python-doit
 #PKG: python-bottle
 #PKG: python-flask
-#PKG: python-pony
 #PKG: python-sqlalchemy
 #PKG: python-flask-appconfig
 #PKG: python-flask-babel
-#PKG: python-contextlib2
 #PKG: python-distro
 #PKG: python-flask-babelex
-#PKG: python-flask-bootstrap
 #PKG: python-flask-caching
-#PKG: python-flask-dance
 #PKG: python-flask-debug
 #PKG: python-flask-gravatar
-#PKG: python-flask-htmlmin
-#PKG: python-flask-jwt
 #PKG: python-flask-login
 #PKG: python-flask-mail
 #PKG: python-flask-marshmallow
@@ -1157,8 +1112,6 @@ fi
 #PKG: python-flask-security
 #PKG: python-ply
 #PKG: python-flask-socketio
-#PKG: python-flask-sphinx-themes
-#PKG: python-progress
 #PKG: python-flask-sqlalchemy
 #PKG: python-flask-talisman
 #PKG: python-flask-wtf
